--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,54 @@
 <h1>Hello world!</h1>
 
+<ul id="messages"></ul>
+
+<form id="comment-form"  >
+  Autor:<br>
+  <input id="author" type="text" name="author" value="author">
+  <br>
+  comentario:<br>
+
+  <textarea id="comment" name="comment" value="comment" rows="4" cols="50">
+
+  </textarea>
+  <br><br>
+
+  
+  <input type="submit" value="Submit">
+</form> 
+
+
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
-    const socket = io('http://localhost:3000');
+
+   const socket = io('http://localhost:3000')
+   const messageForm = document.getElementById('comment-form')
+
+   messageForm.onsubmit = function(event){
+
+       event.preventDefault()
+
+       const author = document.getElementById('author').value
+       const comment = document.getElementById('comment').value
+       const data = { author, comment}
+
+       renderMessage(data)
+
+       socket.emit('sendMessage', data)
+   }
+
+   socket.on( 'messageReceive', (conteudo) =>{
+      renderMessage(conteudo)
+   })
+
+   const messageList = document.getElementById('messages')
+   const renderMessage = (message) => {
+       const element = document.createElement('li')
+       element.innerHTML = `<strong>${message.author}</strong>: ${message.comment}`
+       messageList.append(element)
+   }
+
 </script>
+
+
+
